--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </div></div></div>
 
 
-</div> <!-- centerContent
+</div> 
 
 </div></div></div>
 
@@ -145,8 +145,7 @@
 
 
 <!--
-<div class="_kkLoader" style="background: url(&quot;/is/graphics/loader/twirl16.png&quot;); display: none; z-index: 9999; width: 16px; height: 16px;"></div><div class="_kkLoader" style="background: url(&quot;/is/graphics/loader/twirl16.png&quot;); display: none; z-index: 9999; width: 16px; height: 16px;"></div>
+<div class="_kkLoader" style="background: url(&quot;/is/graphics/loader/twirl16.png&quot;); display: none; z-index: 9999; width: 16px; height: 16px;"></div><div class="_kkLoader" style="background: url(&quot;/is/graphics/loader/twirl16.png&quot;); display: none; z-index: 9999; width: 16px; height: 16px;"></div></body></html>
 -->
-
-	</body>
+</body>
 </html>
