--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--<meta property="fb:admin" content="131888096832286">-->
 <meta name="viewport" content="width=1050, maximum-scale=1.0">
 <link rel="stylesheet" href="./webfonts.css" media="screen">
-<link rel="stylesheet" href="./style.css" media="screen">
+<link rel="stylesheet" href="./styles.css" media="screen">
 <link rel="SHORTCUT ICON" href="./images/si.gif" type="image/gif">
 <!--<link rel="image_src" href="http://larstornoe.com/">
 
